# ruvector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: agentic-synth-ci.yml
crates/router-cli/: Cargo.toml
crates/router-cli/src/: main.rs
crates/router-core/: Cargo.toml
crates/router-core/src/: storage.rs
crates/router-ffi/: Cargo.toml
crates/router-ffi/src/: lib.rs
crates/router-wasm/: Cargo.toml
crates/router-wasm/src/: lib.rs
crates/ruvector-cli/src/cli/: hooks.rs
crates/ruvector-mincut-gated-transformer/: README.md
crates/ruvector-mincut-gated-transformer/src/: lib.rs
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-mincut/src/jtree/: coordinator.rs  hierarchy.rs  mod.rs  sparsifier.rs
docs/postgres/v2/: 00-overview.md
examples/dna/: Cargo.toml
examples/dna-analysis/data/: genes.fasta
examples/dna-analysis/results/: analysis-report.json  ruvector-data.json
examples/dna-analysis/scripts/: dna-analyzer.js  ruvector-integration.js
examples/dna/benches/: dna_bench.rs
examples/dna/src/: main.rs
examples/dna/tests/: kmer_tests.rs  pipeline_tests.rs  security_tests.rs
examples/ruvLLM/esp32-flash/npm/: package.json
